Criação do método abstrato iniciarJogo